--- a/website/register.html
+++ b/website/register.html
@@ -13,11 +13,9 @@ layout: default
     Authentication for this site uses AWS
     <a href="https://aws.amazon.com/cognito/">Cognito</a> in order to provide access through the
     <a href="https://aws.amazon.com/api-gateway/">API Gateway</a> powering the
-    <a href="https://aws.amazon.com/lambda/">Lambda</a> functions with the site's dynamic content. The documentation (i.e. setup instructions, modification details)
-    and full source code for this site as well as the pipeline that powers it is available within the GitHub repository.
+    <a href="https://aws.amazon.com/lambda/">Lambda</a> functions with the site's dynamic content. The administrator will provide instructions on requesting a Workspace
   </p>
-  <a href="https://github.com/kmosby/workspaces-portal" class="btn btn-outline-primary">View Source Code</a>
-</div>
+  </div>
 
 <div class="row">
   <div class="col-md-8 col-lg-6 mr-auto ml-auto">
